[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ai/bad_man.gd" type="Script" id=1]
[ext_resource path="res://gfx/models/characters/bad_man.glb" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=2]
radius = 1.75486
height = 3.60935

[node name="Bad Man" type="KinematicBody"]
collision_layer = 9
input_ray_pickable = false
script = ExtResource( 1 )

[node name="Model" parent="." instance=ExtResource( 2 )]

[node name="Shooter" type="BoneAttachment" parent="Model/badman_rig/Skeleton" index="0"]
transform = Transform( -4.58713e-08, -0.00528584, 0.999986, 1, -0.000826117, -4.32204e-06, 0.000826101, 0.999986, 0.00528584, -1.31291, 3.78301, 1.09037 )
bone_name = "hand.r"

[node name="Cast1" type="RayCast" parent="Model/badman_rig/Skeleton/Shooter"]
transform = Transform( 1, -2.32831e-10, -9.09495e-13, 1.16415e-10, 1, 0, 0, 9.31323e-10, 1, 0.00118375, 1.43285, 0.00757396 )
enabled = true
cast_to = Vector3( 0, 25, 0 )
collision_mask = 14
collide_with_areas = true

[node name="Cast3" type="RayCast" parent="Model/badman_rig/Skeleton/Shooter"]
transform = Transform( 1, -1.55316e-06, 4.64825e-05, -1.06549e-06, 0.998415, 0.0562746, -4.64947e-05, -0.0562746, 0.998415, 0.00118375, 1.42531, 1.43453 )
enabled = true
cast_to = Vector3( 0, 25, 0 )
collision_mask = 14
collide_with_areas = true

[node name="Cast2" type="RayCast" parent="Model/badman_rig/Skeleton/Shooter"]
transform = Transform( 1, -9.89821e-07, -4.49554e-05, -1.45833e-06, 0.998519, -0.0544099, 4.49411e-05, 0.0544099, 0.998519, 0.00118423, 1.43991, -1.32654 )
enabled = true
cast_to = Vector3( 0, 25, 0 )
collision_mask = 14
collide_with_areas = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.69151, 0 )
shape = SubResource( 2 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
target_desired_distance = 10.0
path_max_distance = 5.0
radius = 2.0
time_horizon = 3.0
max_speed = 20.0

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.01664, 0 )
pixel_size = 0.005
billboard = 1
double_sided = false
no_depth_test = true
fixed_size = true
text = "HP: 100"

[editable path="Model"]
